tests/baselines/reference/deeplyNestedAssignabilityIssue.errors.txt
[96mtests/cases/compiler/deeplyNestedAssignabilityIssue.ts[0m:[93m22[0m:[93m17[0m - [91merror[0m[90m TS2322: [0mType '{}' is not assignable to type 'A'.
  Property 'a' is missing in type '{}'.

[30;47m22[0m                 thing: {}
[30;47m  [0m [91m                ~~~~~[0m

  [96mtests/cases/compiler/deeplyNestedAssignabilityIssue.ts[0m:[93m8[0m:[93m19[0m
    [30;47m 8[0m             more: {
    [30;47m  [0m [96m                  ~[0m
    [30;47m 9[0m                 thing: A;
    [30;47m  [0m [96m~~~~~~~~~~~~~~~~~~~~~~~~~[0m
    [30;47m10[0m             }
    [30;47m  [0m [96m~~~~~~~~~~~~~[0m
    Which is from property '"thing"' of type '{ thing: A; }', declared here.
[96mtests/cases/compiler/deeplyNestedAssignabilityIssue.ts[0m:[93m25[0m:[93m17[0m - [91merror[0m[90m TS2322: [0mType '{}' is not assignable to type 'A'.
  Property 'a' is missing in type '{}'.

[30;47m25[0m                 another: {}
[30;47m  [0m [91m                ~~~~~~~[0m

  [96mtests/cases/compiler/deeplyNestedAssignabilityIssue.ts[0m:[93m11[0m:[93m23[0m
    [30;47m11[0m             yetstill: {
    [30;47m  [0m [96m                      ~[0m
    [30;47m12[0m                 another: A;
    [30;47m  [0m [96m~~~~~~~~~~~~~~~~~~~~~~~~~~~[0m
    [30;47m13[0m             }
    [30;47m  [0m [96m~~~~~~~~~~~~~[0m
    Which is from property '"another"' of type '{ another: A; }', declared here.


==== tests/cases/compiler/deeplyNestedAssignabilityIssue.ts (2 errors) ====
    interface A {
        a: number;
    }
    
    interface Large {
        something: {
            another: {
                more: {
                    thing: A;
                }
                yetstill: {
                    another: A;
                }
            }
        }
    }
    
    const x: Large = {
        something: {
            another: {
                more: {
                    thing: {}
                    ~~~~~
!!! error TS2322: Type '{}' is not assignable to type 'A'.
!!! error TS2322:   Property 'a' is missing in type '{}'.
                },
                yetstill: {
                    another: {}
                    ~~~~~~~
!!! error TS2322: Type '{}' is not assignable to type 'A'.
!!! error TS2322:   Property 'a' is missing in type '{}'.
                }
            }
        }
    }
    